<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Cari tahu informasi seputar tanaman tomat anda di AgroTrack</string>
    <string name="title_welcome_page">Selamat datang di AgroTrack!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login to your account</string>
    <string name="title_login_page">Welcome</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Welcome to AgroTrack!</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="author">Author</string>
    <string name="judul">Judul</string>
    <string name="desc">Disini berisi detail cerita</string>
    <string name="image_story">Stories</string>
    <string name="add_story">Tambah</string>
    <string name="camera">Camera</string>
    <string name="galeri">Galeri</string>
    <string name="upload">Upload</string>
    <string name="add_stories">Isi cerita mu disini</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Coba lagi</string>
</resources>